Added loader. Adapted layout

--- a/static-css/index.css
+++ b/static-css/index.css
@@ -5,9 +5,15 @@ body {
 .logo {
     max-width: 200px;
     max-height: 200px;
+    margin: 20px;
 }
 
 .gallery-thumb {
     max-height: 300px;
     margin: 20px;
+}
+
+#loader {
+    max-width: 30px;
+    margin-top: 80px;
 }
