Layout optimized: use relative image sizes. Define margin on thumb wrapper.

--- a/static-css/index.css
+++ b/static-css/index.css
@@ -9,14 +9,15 @@ body {
 }
 
 .gallery-thumb {
-    max-height: 800px;
-    margin: 80px;
+    max-height: 100%;
+    max-width: 100%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border: 1px solid white;
 }
 
 .gallery-thumb-wrapper {
 	display: block;
+    margin: 80px;
 }
 
 #loader {
