Desprate try to show images when fully visible in window.

--- a/static-css/index.css
+++ b/static-css/index.css
@@ -13,11 +13,13 @@ body {
     max-width: 100%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border: 1px solid white;
+    
 }
 
 .gallery-thumb-wrapper {
 	display: block;
     margin: 80px;
+    opacity: 0;
 }
 
 #loader {
