--- a/static-css/index.css
+++ b/static-css/index.css
@@ -45,6 +45,11 @@ body {
 .gallery-thumb {
     max-height: 100%;
     max-width: 100%;
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    overflow: hidden;
+    background-color: black;
 }
 
 .gallery-thumb-wrapper {
